finalizei a estrutura e estilização das páginas dos projetos

--- a/html/ordemdafisica_jla.html
+++ b/html/ordemdafisica_jla.html
@@ -3,13 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Ordem da Física é um clube de estudos sobre física criado para ajudar estudantes a se prepararem para o ENEM, vestibulares e outras provas externas.">
+    <meta name="keywords" content="física, ciência, clube de física, ENEM, vestibulares, estudantes">
+    <meta name="author" content="Azazel Admetus">
+    <link rel="icon" href="../image/odf-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/odf.css">
     <title>Ordem da Física</title>
 </head>
 <body>
     <header>
-        <h1>Ordem da Física</h1>
-        <!-- crie a estrutura da página seguindo a mesma linha de raciocionio que a página do projeto caelum -->
+        <div>
+            <img src="../image/OdF-logo.jpeg" alt="Logo da Ordem da Física - grupo de estudos de física">
+        </div>
+        <div>
+            <h1>Ordem da Física</h1>
+            <p>Um clube de estudos sobre física criado para ajudar estudantes a se prepararem para o ENEM, vestibulares e outras provas externas</p>
+        </div>
+    
     </header>
+    <main>
+        <section id="problematica">
+            <h2>O que nos motivou a criar esse clube?</h2>
+            <p>O objetivo do presidente e idealizador do projeto Luiz Henrique Venâncio, era ensinar física de uma maneira descomplicada, mostrando a beleza por detrás dessa ciência, e disseminando o conhecimento sobre tudo que existe e é explicado pela física.</p>
+        </section>
+        <section id="atuacao">
+            <h2>Onde atuei neste projeto?</h2>
+            <p>Atuei como responsável pelas questões administrativas do clube. Redigi o Regimento Interno e os ofícios necessários para a criação do clube, além de fazer toda e qualquer documentação do clube. Além das questões administrativas, desenvolvi o site oficial do clube, onde inicialmente era um espaço para postar as ações cotidianas do clube.</p>
+            <p>Atualmente o site do clube se encontra indisponível, pois está passando por uma atualização. Em breve ela será concluída, e o site terá uma aparência mais moderna e um espaço mais interativo.</p>
+        </section>
+        <section id="projetos">
+            <h2>Quais projetos desenvolvemos no clube?</h2>
+            <p>O clube ainda está sendo organizado internamente, os objetivos e metas ainda estão sendo discutidas. Mas um dos projetos que pretendemos desenvolver e finalizar ainda neste ano, inclui um treinamento capacitativo com os estudantes da escola. O clube quer mostrar que seu compromisso não é somente com a física, e sim também com a educação estudantil.</p>
+        </section>
+        <section id="resultados">
+            <h2>Quais resultados já alcançamos com esse projeto?</h2>
+            <p>Tivemos uma grande quantidade de estudantes interessados em aprender e melhorar as suas notas em física. Muitos chegaram com o mesmo problema: física é muito difícil. E ao longo das aulas e atividades, aos poucos eles foram desenvolvendo não só um maior gosto pela física, como também uma maior facilidade. </p>
+        </section>
+        <section id="conclusao">
+            <h2>O projeto ainda está em desenvolvimento. Mais informações sobre o projeto no link <span>abaixo</span></h2>
+            <a href="https://www.instagram.com/ordemdafisicajla?utm_source=ig_web_button_share_sheet&igsh=ODE5dWo4MjA1M3Bp">Veja mais sobre</a>
+        </section> 
+    </main>
+    <footer>
+        <a id="link" href="../index.html">GUSTAVO VIEIRA</a>
+        <h4>Todos os códigos estão disponíveis no meu repositório do GitHub, acesse pelo link na página principal.</h4>
+    </footer>
     
 </body>
 </html>
