--- a/html/projeto_caelum.html
+++ b/html/projeto_caelum.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Caelum - Robô inovador desenvolvido para interagir, responder perguntas e executar tarefas em mesas e ambientes controlados.">
+    <meta name="keywords" content="Caelum, Robô, Inteligência Artificial, Interação, Tecnologia, Inovação, Raspberry Pi, Arduino, Solum, Gustavo Vieira">
+    <meta name="author" content="Azazel Admetus">
+    <link rel="icon" href="../image/caelum-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/stylecaelum.css">
     <title>Projeto Caelum</title>
 </head>
 <body>
     <header>
-        <h1>Projeto Caelum</h1>
-        <p>O projeto visa a criação de um robô feito por estudantes capaz de andar e falar usando inteligência artificial, servindo como motivação e estopim para uma geração apaixonada por tecnologia</p>
+        <div>
+            <img src="../image/ProjetoCaelumLogo.png" alt="">
+        </div>
+        <div>
+            <h1>Projeto Caelum</h1>
+            <p>O projeto visa a criação de um robô feito por estudantes capaz de andar e falar usando inteligência artificial, servindo como motivação e estopim para uma geração apaixonada por tecnologia</p>
+        </div>
     </header>
     <main>
         <section id="sobre">
             <h2>Qual seria a problemática deste projeto?</h2>
             <p>A ideia do projeto era servir como inspiração para os jovens criarem projetos mais complexos, trabalhando o raciocínio lógico, criatividade, resiliência, liderança e trabalho em equipe.</p>
-            <p>O Projeto foi aprimorado e agora serve como peça principal para um outro projeto em desenvolvimento. <a href="engenium_jla.htmml">Conheça mais sobre o que será o clube de robótica Engenium</a></p>
+            <p>O Projeto foi aprimorado e agora serve como peça principal para um outro projeto em desenvolvimento. <a href="engenium_jla.html">Conheça mais sobre o que será o clube de robótica Engenium</a></p>
         </section>
         <section id="participacao">
             <h2>Onde atuei neste projeto?</h2>
@@ -40,23 +49,18 @@
             <h2>Quais são as nossas próximas metas?</h2>
             <p>A nossa próxima meta é entregar um protótipo real e completo, com uma carcaça finalizada, além de melhoria na parte robótica e programacional. Além disso, pretendemos fazer testes com os alunos para captar dados sobre a experiência com o projeto. Temos como meta também, inscrever o projeto para participar de exposições de robótica e tecnologia.</p>
         </section>
-        <section id="imagens">
-            <h2>Acompanhe alguma das imagens tiradas durante o desenvolvimento</h2>
-            <div class="card-container">
-            </div>
-        </section>
         <section id="git">
             <h2>Se interessou no projeto? Acompanhe as redes sociais ou o repositório do github deste projeto. Em breve novidades serão reveladas!</h2>
-            <a href="meu insta"></a>
-            <a href="github"></a>
+            <a href="https://www.instagram.com/dev_admetus">INSTAGRAM</a>
+            <a href="https://github.com/Azazel-Admetus/projeto_caelum">GITHUB</a>
         </section>
         <section>
             <h2>O projeto ainda continua em desenvolvimento. É previsto a finalização do protótipo final até dezembro de 2025.</h2>
         </section>
     </main>
     <footer>
-        <p id="email">solumbasileus@gmail.com</p>
-        <a id="link" href="index.html">GUSTAVO VIEIRA</a>
+        <a id="link" href="../index.html">GUSTAVO VIEIRA</a>
+        <h4>Todos os códigos estão disponíveis no meu repositório do GitHub.</h4>
     </footer>
 </body>
 </html>
