--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         
         <h3>Além do Caelum, estou envolvido em iniciativas como:</h3>
         <ul>
-            <li><a href="html/padrao.html">Clube de estudos de Física - Ordem da Física</a></li>
-            <li><a href="html/padrao.html">Clube do livro - Narrify Versos e Prosa</a></li>
-            <li><a href="html/padrao.html">Clube de Robótica - Engenium</a></li>
+            <li><a href="html/ordemdafisica_jla.html">Clube de estudos de Física - Ordem da Física</a></li>
+            <li><a href="html/narrify_jla.html">Clube do livro - Narrify Versos e Prosa</a></li>
+            <li><a href="html/engenium_jla.html">Clube de Robótica - Engenium</a></li>
+            <li><a href="html/projeto_caelum.html">Projeto de robótica educacional - Projeto Caelum</a></li>
         </ul>
 
         <div id="lyup">
@@ -112,30 +113,30 @@
         {
             titulo: "Projeto Caelum", 
             descricao: "Um robô autônomo e interativo desenvolvido por estudantes, a fim de promover a educação tecnológica e o protagonismo estudantil.",
-            imagem:"image/projeto_caelum.jpeg",
+            imagem:"image/ProjetoCaelumLogo.png",
             // link: "html/projeto_caelum.html"
-            link:"html/padrao.html"
+            link:"html/projeto_caelum.html"
         },
         {
             titulo: "Clube de estudos de Física - Ordem da Física", 
             descricao: "Um clube de estudos dedicado a ajudar estudantes a se prepararem para o ENEM, vestibulares e exames externos. O objetivo é tornar a física acessível e interessante, tornando o momento de estudar em algo muito mais divertido.",
             imagem: "image/OdF-logo.jpeg",
             // link: "html/ordem_da_fisica.html"
-            link:"html/padrao.html"
+            link:"html/ordemdafisica_jla.html"
         }, 
         {
             titulo: "Clube do livro - Narrify Versos e Prosa", 
             descricao: "Um clube do livro dedicado a jovens leitores e entusiastas da literatura. O objetivo é promover uma cultura literária entre os jovens, criando uma comunidade de leitores no âmbito nacional. Nossa missão é promover tanto a literatura nacional como internacional.",
             imagem: "image/narrify-logo.png",
             // link: "html/narrify.html"   
-            link:"html/padrao.html"  
+            link:"html/narrify_jla.html"  
         }, 
         {
             titulo: "Clube de Robótica - Engenium",
             descricao: "Um clube de robótica voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação. Levando o preparo de soft skills aos estudantes.",
             imagem: "image/engenium-logo.jpeg",
             // link: "html/engenium.html"
-            link:"html/padrao.html"
+            link:"html/engenium_jla.html"
         }
     ];
     const section = document.getElementById('projetos');
