alterei a minha foto pessoal no index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section id="inicio">
         <div>
-            <img src="image/eu-dnv.jpg" alt="Minha foto pessoal">
+            <img src="image/Foto Gustavo de Souza Vieira Perfil.jpeg" alt="Minha foto pessoal">
         </div>
         <div>
             <h1>Tecnologia, Liderança e Propósito — minha tríade de criação</h1>
