Improve SEO, navigation, and contact flow

--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>Base44 APP</title>
+    <meta
+      name="description"
+      content="Portfólio profissional de Gustavo Vieira, desenvolvedor e líder de projetos com foco em tecnologia, educação e impacto social."
+    />
+    <meta name="author" content="Gustavo Vieira" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="color-scheme" content="dark light" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:title" content="Gustavo Vieira - Desenvolvedor e Líder de Projetos" />
+    <meta
+      property="og:description"
+      content="Portfólio profissional de Gustavo Vieira, desenvolvedor e líder de projetos com foco em tecnologia, educação e impacto social."
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image:alt" content="Foto de Gustavo Vieira" />
+    <meta property="og:site_name" content="Gustavo Vieira" />
+    <meta property="og:url" content="https://gustavovieira.site" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gustavo Vieira - Desenvolvedor e Líder de Projetos" />
+    <meta
+      name="twitter:description"
+      content="Portfólio profissional de Gustavo Vieira, desenvolvedor e líder de projetos com foco em tecnologia, educação e impacto social."
+    />
+    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:url" content="https://gustavovieira.site" />
+
+    <link rel="icon" href="/og-image.jpg" />
+    <link rel="canonical" href="https://gustavovieira.site" />
+    <title>Gustavo Vieira - Desenvolvedor e Líder de Projetos</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Gustavo Vieira",
+        "jobTitle": "Desenvolvedor e Líder de Projetos",
+        "email": "mailto:gustavodsv7184@gmail.com",
+        "url": "https://gustavovieira.site",
+        "image": "https://gustavovieira.site/og-image.jpg",
+        "sameAs": [
+          "https://www.linkedin.com/in/gustavo-vieira-azazeladmetus",
+          "https://github.com/Azazel-Admetus",
+          "https://www.instagram.com/dev_admetus/"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
